# torchdde

./: .all_objects.cache  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  NDDE.ipynb  README.md  brusselator.py  brusselator_ode.py  burgers.py  dataset.py  dde_example.py  dde_trainer.py  index.html  ks.py  launch.sh  launch_array.sh  lorenz.py  mkdocs.yml  model.py  ndde.py  neural_dde.py  objects.inv  ode_test.py  ode_trainer.py  optimal_delays.py  pyproject.toml  quickexample.py  requirements.txt  sanity_check_learning_delays.py  sanity_check_learning_delays2.py  setup.py  sitemap.xml  sshadd.sh  test_delays.py  test_delays2.py  vdp.py
.github/workflows/: build_docs.yml  python-tests.yml  release.yml  run_tests.yml
QuickAndDirty/: NDDE.ipynb  NDDE_adjoint.py  dataset.py  dde_solver.py  interpolators.py  model.py  ndde.py  nnde_adjoint.py  ode_solver.py  ts.npy  ys.npy
docs/: CNAME  about.md  index.md  requirements.txt
docs/_static/_static/: custom_css.css
docs/interpolators/: linear-interpolator.md
docs/usage/: contribute.md  faq.md  getting-started.md  integration-de.md  neural-dde.md  solvers.md  stepsize-controller.md  training-dde.md  training-de.md  training-ode.md  training.md
interpolators/linear-interpolator/: index.html
search/: search_index.json
test/: requirements.txt  test_dde_adjoint.py  test_dde_backprop.py  test_dde_solver.py  test_global_interpolation.py  test_linear_interpolator.py  test_local_interpolation.py  test_ode_adjoint.py  test_ode_backprop.py  test_ode_solver.py
torchdde/: .flake8  __init__.py  adjoint_dde.py  adjoint_ode.py  dde_adjoint.py  integrate.py  ndde_adjoint.py  nnde_adjoint.py  ode_adjoint.py
torchdde/global_interpolation/: __init__.py  dense_interpolation.py  linear_interpolation.py
torchdde/interpolation/: __init__.py  linear_interpolation.py
torchdde/local_interpolation/: __init__.py  base.py  first_order_interpolation.py  fourth_order_interpolation.py  third_order_interpolation.py
torchdde/solver/: __init__.py  base.py  dde_solver.py  dopri5.py  euler.py  heun.py  implicit_euler.py  ode_solver.py  ralston.py  rk2.py  rk4.py
torchdde/step_size_controller/: __init__.py  adaptive.py  base.py  constant.py
usage/contribute/: index.html
usage/faq/: index.html
usage/getting-started/: index.html
usage/integration-de/: index.html
usage/neural-dde/: index.html
usage/solvers/: index.html
usage/stepsize-controller/: index.html
usage/training-dde/: index.html
usage/training-de/: index.html
usage/training-ode/: index.html
