[project]
name = "torchdde"
version = "0.0.1"
description = "GPU+autodiff-capable ODE/SDE/CDE solvers written in JAX."
readme = "README.md"
requires-python ="~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "thibault monsel", email = "thibaultmonsel@gmail.com"},
]
keywords = ["torch", "dynamical-systems", "differential-equations", "deep-learning", "neural-differential-equations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {repository = "https://github.com/thibmonsel/torchdde" }
install_requires = ["torch>=2.1", "matplotlib", "numpy", "scipy", "jaxtyping>=0.2.24", "typing_extensions>=4.5.0", "pip install git+https://github.com/patrick-kidger/torchcubicspline.git"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["torchdde/*"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=torchdde,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"
markers = ["slow"]

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]
src = []

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["torchdde", "tests"]