[project]
name = "torchdde"
version = "0.1.0"
description = "DDE numerical solvers in Python."
readme = "README.md"
requires-python =">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "thibault monsel", email = "thibaultmonsel@gmail.com"},
]
keywords = ["torch", "dynamical-systems", "differential-equations", "deep-learning", "neural-differential-equations"]

urls = {repository = "https://github.com/thibmonsel/torchdde" }
dependencies = ["torch>=2.1", "jaxtyping>=0.2.24", "typing_extensions>=4.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["torchdde/*"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=torchdde,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"
markers = ["slow"]

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]
src = []

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["torchdde", "tests"]